--- a/Project_1/WebContent/WEB-INF/web.xml
+++ b/Project_1/WebContent/WEB-INF/web.xml
@@ -4,28 +4,28 @@ xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/n
 
   <servlet>
     <servlet-name>CreateUser</servlet-name>
-    <servlet-class>CreateUser</servlet-class>
+    <servlet-class>servlets.CreateUser</servlet-class>
   </servlet>
   <servlet>
   	<servlet-name>Login</servlet-name>
-    <servlet-class>Login</servlet-class>
+    <servlet-class>servlets.Login</servlet-class>
   </servlet>
   <servlet>
   	<servlet-name>Logout</servlet-name>
-    <servlet-class>Logout</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>AddComment</servlet-name>
-    <servlet-class>AddComment</servlet-class>
+    <servlet-class>servlets.Logout</servlet-class>
   </servlet>
   <servlet>
   	<servlet-name>AddFriend</servlet-name>
-    <servlet-class>AddFriend</servlet-class>
+    <servlet-class>servlets.AddFriend</servlet-class>
   </servlet>
   <servlet>
   	<servlet-name>RemoveFriend</servlet-name>
-    <servlet-class>RemoveFriend</servlet-class>
+    <servlet-class>servlets.RemoveFriend</servlet-class>
   </servlet>  
+  <servlet>
+  	<servlet-name>AddComment</servlet-name>
+    <servlet-class>servlets.AddComment</servlet-class>
+  </servlet>
   
   
   
@@ -41,17 +41,17 @@ xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/n
     <servlet-name>Logout</servlet-name>
     <url-pattern>/Servlets/Logout</url-pattern>
   </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>AddComment</servlet-name>
-    <url-pattern>/Servlets/AddComment</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
+    <servlet-mapping>
     <servlet-name>AddFriend</servlet-name>
     <url-pattern>/Servlets/AddFriend</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>RemoveFriend</servlet-name>
     <url-pattern>/Servlets/RemoveFriend</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>AddComment</servlet-name>
+    <url-pattern>/Servlets/AddComment</url-pattern>
   </servlet-mapping>
   
   
